--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -1,19 +1,24 @@
 name: mm-vmae
 channels:
   - pytorch
+  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - brotlipy=0.7.0=py38h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2022.4.26=h06a4308_0
-  - certifi=2022.5.18.1=py38h06a4308_0
+  - certifi=2021.10.8=py38h06a4308_2
   - cffi=1.15.0=py38hd667e15_1
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - cryptography=37.0.1=py38h9ce1e76_0
   - cudatoolkit=11.3.1=h2bc3f7f_2
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
   - ffmpeg=4.2.2=h20bf706_0
   - freetype=2.11.0=h70c0345_0
   - giflib=5.2.1=h7b6447c_0
@@ -21,6 +26,8 @@ dependencies:
   - gnutls=3.6.15=he1e5248_0
   - idna=3.3=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - ipython=8.2.0=py38h06a4308_0
+  - jedi=0.18.1=py38h06a4308_1
   - jpeg=9e=h7f8727e_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
@@ -39,7 +46,9 @@ dependencies:
   - libvpx=1.7.0=h439df22_0
   - libwebp=1.2.2=h55f646e_0
   - libwebp-base=1.2.2=h7f8727e_0
+  - line_profiler=3.3.1=py38hd09550d_0
   - lz4-c=1.9.3=h295c915_1
+  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
@@ -49,10 +58,17 @@ dependencies:
   - numpy=1.22.3=py38he7a7128_0
   - numpy-base=1.22.3=py38hf524024_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1o=h7f8727e_0
+  - openssl=1.1.1n=h7f8727e_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py38h22f2fdc_0
   - pip=21.2.4=py38h06a4308_0
+  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.13=h12debd9_0
@@ -63,11 +79,14 @@ dependencies:
   - setuptools=61.2.0=py38h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.38.3=hc218d9a_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
   - tk=8.6.12=h1ccaba5_0
   - torchaudio=0.11.0=py38_cu113
   - torchvision=0.12.0=py38_cu113
+  - traitlets=5.1.1=pyhd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - urllib3=1.26.9=py38h06a4308_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.2.5=h7f8727e_1
@@ -109,6 +128,7 @@ dependencies:
       - nodeenv==1.6.0
       - oauthlib==3.2.0
       - omegaconf==2.2.2
+      - opencv-python==4.6.0.66
       - packaging==21.3
       - pathspec==0.9.0
       - platformdirs==2.5.2
