--- a/jobs/amlt.yaml
+++ b/jobs/amlt.yaml
@@ -19,11 +19,10 @@ code:
 
 storage:
   data:
-    storage_account_name: commondatasets
-    # storage_account_name: commondatasets2 # does not work todo
+    storage_account_name: commondatasets2
     container_name: commondatasets
     mount_dir: /mnt/data
-  output:
+  custom_output:
     storage_account_name: ramadaanaml
     container_name: mmvmae-benchmark-results
     mount_dir: /mnt/data_output
@@ -31,12 +30,13 @@ storage:
 
 search:
   job_template:
-    name: job_{experiment_name:s}_{auto:10s}
+    # name: job_{experiment_name:s}_{auto:10s}
+    name: job_{auto:10s}
     sku: G1
     command:
       - python src/benchmark_dataloader.py
-        --train_ann_file /mnt/data/tartanair-release1/train_ann_debug.json
-        --benchmark_results_file $$AMLT_OUTPUT_DIR/benchmark_results.csv
+        --train_ann_file /mnt/data/tartanair-release1/train_ann_debug_ratnesh.json
+        --benchmark_results_file /mnt/data_output/benchmark_results.csv
         --batch_size {batch_size}
         --workers {num_workers}
         --num_seq {num_seq}
@@ -44,24 +44,19 @@ search:
     submit_args:
       container_args:
         shm_size: 640g
-      env:
-        { AZUREML_COMPUTE_USE_COMMON_RUNTIME: True }
-        # {AZUREML_COMPUTE_USE_COMMON_RUNTIME: True, NCCL_DEBUG: INFO, NCCL_DEBUG_SUBSYS: ALL} # for debugging
+      env: { AZUREML_COMPUTE_USE_COMMON_RUNTIME: True }
 
   type: grid
   max_trials: 500
   params:
     - name: num_workers
-      # values: choice(1, 2, 3, 6)
-      values: choice(1, 3, 6)
+      values: choice(1, 2, 3, 6)
 
     - name: batch_size
-      # values: choice(1, 2, 4, 8, 16, 32, 64)
-      values: choice(32, 64)
+      values: choice(1, 2, 4, 8, 16, 32, 64)
 
     - name: num_seq
-      values: choice(16)
+      values: choice(1, 2, 4, 8)
 
     - name: seq_len
-      values: choice(1,2,4)
-      # values: choice(1, 2, 4, 8, 16)
+      values: choice(1, 2, 4, 8, 16)
