--- a/jobs/amlt.yaml
+++ b/jobs/amlt.yaml
@@ -52,7 +52,7 @@ search:
   max_trials: 1000
   params:
     - name: num_workers
-      values: choice(1, 3, 6)
+      values: choice(0, 1, 3, 6)
 
     - name: batch_size
       values: choice(1, 2, 4, 8, 16, 32, 64)
