--- a/jobs/amlt.yaml
+++ b/jobs/amlt.yaml
@@ -52,13 +52,18 @@ search:
   max_trials: 1000
   params:
     - name: num_workers
-      values: choice(0, 1, 3, 6)
+      values: choice(0, 1, 3, 4, 6)
 
     - name: batch_size
       values: choice(1, 2, 4, 8, 16, 32, 64)
 
     - name: num_seq
-      values: choice(1, 2, 4, 8)
+      values: choice(1)
+      # values: choice(1, 2, 4, 8)
 
     - name: seq_len
       values: choice(1, 2, 4, 8, 16)
+
+    - name: modalities
+      values: choice(image_left, depth_left, flow_flow)
+      # values: choice(image_left, image_right, depth_left, depth_right, flow_mask, flow_flow, seg_left, seg_right)
