add modalities to argparse

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,10 @@
                 "/datadrive/commondatasets/tartanair-release1/train_ann_debug_ratnesh.json",
                 "--benchmark_results_file",
                 "benchmark_results.csv",
+                "--modalities",
+                "image_left",
+                // "depth_left",
+                // "flow_flow",
                 "--batch_size",
                 "32",
                 "--workers",
