--- a/jobs/amlt.yaml
+++ b/jobs/amlt.yaml
@@ -38,11 +38,12 @@ search:
     command:
       - python src/benchmark_dataloader.py
         --train_ann_file /mnt/data/tartanair-release1/train_ann_debug_ratnesh.json
-        --benchmark_results_file /mnt/data_output/benchmark_results.csv
+        --benchmark_results_file /mnt/data_output/benchmark_modalities_results.csv
         --batch_size {batch_size}
         --workers {num_workers}
         --num_seq {num_seq}
         --seq_len {seq_len}
+        --modalities {modalities}
     submit_args:
       container_args:
         shm_size: 640g
@@ -52,7 +53,9 @@ search:
   max_trials: 1000
   params:
     - name: num_workers
-      values: choice(0, 1, 3, 4, 6)
+      values: choice(6)
+      # values: choice(4, 6)
+      # values: choice(0, 1, 3, 4, 6)
 
     - name: batch_size
       values: choice(1, 2, 4, 8, 16, 32, 64)
@@ -65,5 +68,6 @@ search:
       values: choice(1, 2, 4, 8, 16)
 
     - name: modalities
-      values: choice(image_left, depth_left, flow_flow)
-      # values: choice(image_left, image_right, depth_left, depth_right, flow_mask, flow_flow, seg_left, seg_right)
+      values: choice("image_left")
+      # values: choice("image_left", "depth_left", "flow_flow")
+      # values: choice("image_left", "image_right", "depth_left", "depth_right", "flow_mask", "flow_flow", "seg_left", "seg_right")
