see full commit msg: * get flowtransform from saihv/COMPASS/...compass_new_dataloader/build.py * get flow + rgb to work together by * fix color jitter aug to not break on only flow modality; * print modality and augmentation in benchmark result * rm data/ folder from gitignore so ctrl+f/p works in vs code;

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,15 +27,17 @@
                 "--modalities",
                 "image_left",
                 // "depth_left",
-                // "flow_flow",
+                "flow_flow",
                 "--batch_size",
                 "32",
                 "--workers",
-                "1",
+                "0",
                 "--num_seq",
                 "1",
                 "--seq_len",
-                "16"
+                "16",
+                "--train_transform",
+                "TartanAirVideoTransform"
             ]
         }
     ]
