--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
                 "benchmark_results.csv",
                 "--modalities",
                 "image_left",
-                // "depth_left",
+                "depth_left",
                 "flow_flow",
                 "--batch_size",
                 "32",
