--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - brotlipy=0.7.0=py38h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2022.4.26=h06a4308_0
-  - certifi=2021.10.8=py38h06a4308_2
+  - certifi=2022.6.15=py38h06a4308_0
   - cffi=1.15.0=py38hd667e15_1
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - cryptography=37.0.1=py38h9ce1e76_0
@@ -58,12 +58,13 @@ dependencies:
   - numpy=1.22.3=py38he7a7128_0
   - numpy-base=1.22.3=py38hf524024_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1n=h7f8727e_0
+  - openssl=1.1.1p=h5eee18b_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py38h22f2fdc_0
   - pip=21.2.4=py38h06a4308_0
+  - portalocker=2.3.0=py38h06a4308_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
@@ -72,7 +73,7 @@ dependencies:
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.13=h12debd9_0
-  - pytorch=1.11.0=py3.8_cuda11.3_cudnn8.2.0_0
+  - pytorch=1.12.0=py3.8_cuda11.3_cudnn8.3.2_0
   - pytorch-mutex=1.0=cuda
   - readline=8.1.2=h7f8727e_1
   - requests=2.27.1=pyhd3eb1b0_0
@@ -81,8 +82,8 @@ dependencies:
   - sqlite=3.38.3=hc218d9a_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tk=8.6.12=h1ccaba5_0
-  - torchaudio=0.11.0=py38_cu113
-  - torchvision=0.12.0=py38_cu113
+  - torchdata=0.4.0=py38
+  - torchvision=0.13.0=py38_cu113
   - traitlets=5.1.1=pyhd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - urllib3=1.26.9=py38h06a4308_0
@@ -93,71 +94,78 @@ dependencies:
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.5.2=ha4553b6_0
   - pip:
-      - absl-py==1.1.0
-      - aiohttp==3.8.1
-      - aiosignal==1.2.0
-      - antlr4-python3-runtime==4.9.3
-      - async-timeout==4.0.2
-      - attrs==21.4.0
-      - black==22.3.0
-      - cachetools==5.2.0
-      - cfgv==3.3.1
-      - cycler==0.11.0
-      - distlib==0.3.4
-      - docstring-parser==0.14.1
-      - filelock==3.7.1
-      - flake8==4.0.1
-      - fonttools==4.33.3
-      - frozenlist==1.3.0
-      - fsspec==2022.5.0
-      - gcsfs==2022.5.0
-      - google-auth==2.7.0
-      - google-auth-oauthlib==0.4.6
-      - grpcio==1.46.3
-      - identify==2.5.1
-      - importlib-metadata==4.11.4
-      - iniconfig==1.1.1
-      - isort==5.10.1
-      - jsonargparse==4.9.0
-      - kiwisolver==1.4.3
-      - markdown==3.3.7
-      - matplotlib==3.5.2
-      - mccabe==0.6.1
-      - multidict==6.0.2
-      - mypy-extensions==0.4.3
-      - nodeenv==1.6.0
-      - oauthlib==3.2.0
-      - omegaconf==2.2.2
-      - opencv-python==4.6.0.66
-      - packaging==21.3
-      - pathspec==0.9.0
-      - platformdirs==2.5.2
-      - pluggy==1.0.0
-      - pre-commit==2.19.0
-      - protobuf==3.19.4
-      - py==1.11.0
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
-      - pycodestyle==2.8.0
-      - pydeprecate==0.3.2
-      - pyflakes==2.4.0
-      - pyparsing==3.0.9
-      - pytest==7.1.2
-      - python-dateutil==2.8.2
-      - pytorch-lightning==1.6.4
-      - pyyaml==6.0
-      - requests-oauthlib==1.3.1
-      - rsa==4.8
-      - sh==1.14.2
-      - tensorboard==2.9.1
-      - tensorboard-data-server==0.6.1
-      - tensorboard-plugin-wit==1.8.1
-      - timm==0.5.4
-      - toml==0.10.2
-      - tomli==2.0.1
-      - torchmetrics==0.9.1
-      - tqdm==4.64.0
-      - virtualenv==20.14.1
-      - werkzeug==2.1.2
-      - yarl==1.7.2
-      - zipp==3.8.0
+    - absl-py==1.1.0
+    - aiohttp==3.8.1
+    - aiosignal==1.2.0
+    - antlr4-python3-runtime==4.9.3
+    - async-timeout==4.0.2
+    - attrs==21.4.0
+    - black==22.3.0
+    - cachetools==5.2.0
+    - cfgv==3.3.1
+    - click==8.1.3
+    - cycler==0.11.0
+    - distlib==0.3.4
+    - docstring-parser==0.14.1
+    - filelock==3.7.1
+    - flake8==4.0.1
+    - fonttools==4.33.3
+    - frozenlist==1.3.0
+    - fsspec==2022.5.0
+    - gcsfs==2022.5.0
+    - google-api-core==2.8.2
+    - google-auth==2.7.0
+    - google-auth-oauthlib==0.4.6
+    - google-cloud-core==2.3.1
+    - google-cloud-storage==2.4.0
+    - google-crc32c==1.3.0
+    - google-resumable-media==2.3.3
+    - googleapis-common-protos==1.56.3
+    - grpcio==1.46.3
+    - identify==2.5.1
+    - importlib-metadata==4.11.4
+    - iniconfig==1.1.1
+    - isort==5.10.1
+    - jsonargparse==4.9.0
+    - kiwisolver==1.4.3
+    - markdown==3.3.7
+    - matplotlib==3.5.2
+    - mccabe==0.6.1
+    - multidict==6.0.2
+    - mypy-extensions==0.4.3
+    - nodeenv==1.6.0
+    - oauthlib==3.2.0
+    - omegaconf==2.2.2
+    - opencv-python==4.6.0.66
+    - packaging==21.3
+    - pathspec==0.9.0
+    - platformdirs==2.5.2
+    - pluggy==1.0.0
+    - pre-commit==2.19.0
+    - protobuf==3.19.4
+    - py==1.11.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pycodestyle==2.8.0
+    - pydeprecate==0.3.2
+    - pyflakes==2.4.0
+    - pyparsing==3.0.9
+    - pytest==7.1.2
+    - python-dateutil==2.8.2
+    - pytorch-lightning==1.6.4
+    - pyyaml==6.0
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
+    - sh==1.14.2
+    - tensorboard==2.9.1
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - timm==0.5.4
+    - toml==0.10.2
+    - tomli==2.0.1
+    - torchmetrics==0.9.1
+    - tqdm==4.64.0
+    - virtualenv==20.14.1
+    - werkzeug==2.1.2
+    - yarl==1.7.2
+    - zipp==3.8.0
