--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -1,4 +1,4 @@
-name: mm-vmae
+name: dataloader-benchmark
 channels:
   - pytorch
   - anaconda
@@ -123,105 +123,105 @@ dependencies:
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.5.2=ha4553b6_0
   - pip:
-    - absl-py==1.1.0
-    - aiohttp==3.8.1
-    - aiosignal==1.2.0
-    - alembic==1.8.0
-    - antlr4-python3-runtime==4.9.3
-    - async-timeout==4.0.2
-    - attrs==21.4.0
-    - black==22.3.0
-    - cachetools==5.2.0
-    - cfgv==3.3.1
-    - click==8.1.3
-    - cloudpickle==2.1.0
-    - cycler==0.11.0
-    - databricks-cli==0.17.0
-    - distlib==0.3.4
-    - docker==5.0.3
-    - docstring-parser==0.14.1
-    - entrypoints==0.4
-    - filelock==3.7.1
-    - flake8==4.0.1
-    - flask==2.1.2
-    - fonttools==4.33.3
-    - frozenlist==1.3.0
-    - fsspec==2022.5.0
-    - gcsfs==2022.5.0
-    - gitdb==4.0.9
-    - gitpython==3.1.27
-    - google-api-core==2.8.2
-    - google-auth==2.7.0
-    - google-auth-oauthlib==0.4.6
-    - google-cloud-core==2.3.1
-    - google-cloud-storage==2.4.0
-    - google-crc32c==1.3.0
-    - google-resumable-media==2.3.3
-    - googleapis-common-protos==1.56.3
-    - greenlet==1.1.2
-    - grpcio==1.46.3
-    - gunicorn==20.1.0
-    - identify==2.5.1
-    - importlib-metadata==4.11.4
-    - importlib-resources==5.8.0
-    - iniconfig==1.1.1
-    - isort==5.10.1
-    - itsdangerous==2.1.2
-    - jinja2==3.1.2
-    - jsonargparse==4.9.0
-    - kiwisolver==1.4.3
-    - mako==1.2.1
-    - markdown==3.3.7
-    - matplotlib==3.5.2
-    - mccabe==0.6.1
-    - mlflow==1.27.0
-    - multidict==6.0.2
-    - mypy-extensions==0.4.3
-    - nodeenv==1.6.0
-    - oauthlib==3.2.0
-    - omegaconf==2.2.2
-    - opencv-python==4.6.0.66
-    - pandas==1.4.3
-    - pathspec==0.9.0
-    - platformdirs==2.5.2
-    - pluggy==1.0.0
-    - pre-commit==2.19.0
-    - prometheus-client==0.14.1
-    - prometheus-flask-exporter==0.20.2
-    - protobuf==3.19.4
-    - py==1.11.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pycodestyle==2.8.0
-    - pydeprecate==0.3.2
-    - pyflakes==2.4.0
-    - pyjwt==2.4.0
-    - pyparsing==3.0.9
-    - pytest==7.1.2
-    - pytorch-lightning==1.6.4
-    - pyyaml==6.0
-    - querystring-parser==1.2.4
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - scipy==1.8.1
-    - sh==1.14.2
-    - smmap==5.0.0
-    - sqlalchemy==1.4.39
-    - sqlparse==0.4.2
-    - tabulate==0.8.10
-    - tensorboard==2.9.1
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - timm==0.5.4
-    - toml==0.10.2
-    - tomli==2.0.1
-    - torchmetrics==0.9.1
-    - tqdm==4.64.0
-    - virtualenv==20.14.1
-    - websocket-client==1.3.3
-    - werkzeug==2.1.2
-    - yarl==1.7.2
-    - zipp==3.8.0
-    - cupy-cuda116
-    - ffcv 
-    - numba
+      - absl-py==1.1.0
+      - aiohttp==3.8.1
+      - aiosignal==1.2.0
+      - alembic==1.8.0
+      - antlr4-python3-runtime==4.9.3
+      - async-timeout==4.0.2
+      - attrs==21.4.0
+      - black==22.3.0
+      - cachetools==5.2.0
+      - cfgv==3.3.1
+      - click==8.1.3
+      - cloudpickle==2.1.0
+      - cycler==0.11.0
+      - databricks-cli==0.17.0
+      - distlib==0.3.4
+      - docker==5.0.3
+      - docstring-parser==0.14.1
+      - entrypoints==0.4
+      - filelock==3.7.1
+      - flake8==4.0.1
+      - flask==2.1.2
+      - fonttools==4.33.3
+      - frozenlist==1.3.0
+      - fsspec==2022.5.0
+      - gcsfs==2022.5.0
+      - gitdb==4.0.9
+      - gitpython==3.1.27
+      - google-api-core==2.8.2
+      - google-auth==2.7.0
+      - google-auth-oauthlib==0.4.6
+      - google-cloud-core==2.3.1
+      - google-cloud-storage==2.4.0
+      - google-crc32c==1.3.0
+      - google-resumable-media==2.3.3
+      - googleapis-common-protos==1.56.3
+      - greenlet==1.1.2
+      - grpcio==1.46.3
+      - gunicorn==20.1.0
+      - identify==2.5.1
+      - importlib-metadata==4.11.4
+      - importlib-resources==5.8.0
+      - iniconfig==1.1.1
+      - isort==5.10.1
+      - itsdangerous==2.1.2
+      - jinja2==3.1.2
+      - jsonargparse==4.9.0
+      - kiwisolver==1.4.3
+      - mako==1.2.1
+      - markdown==3.3.7
+      - matplotlib==3.5.2
+      - mccabe==0.6.1
+      - mlflow==1.27.0
+      - multidict==6.0.2
+      - mypy-extensions==0.4.3
+      - nodeenv==1.6.0
+      - oauthlib==3.2.0
+      - omegaconf==2.2.2
+      - opencv-python==4.6.0.66
+      - pandas==1.4.3
+      - pathspec==0.9.0
+      - platformdirs==2.5.2
+      - pluggy==1.0.0
+      - pre-commit==2.19.0
+      - prometheus-client==0.14.1
+      - prometheus-flask-exporter==0.20.2
+      - protobuf==3.19.4
+      - py==1.11.0
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pycodestyle==2.8.0
+      - pydeprecate==0.3.2
+      - pyflakes==2.4.0
+      - pyjwt==2.4.0
+      - pyparsing==3.0.9
+      - pytest==7.1.2
+      - pytorch-lightning==1.6.4
+      - pyyaml==6.0
+      - querystring-parser==1.2.4
+      - requests-oauthlib==1.3.1
+      - rsa==4.8
+      - scipy==1.8.1
+      - sh==1.14.2
+      - smmap==5.0.0
+      - sqlalchemy==1.4.39
+      - sqlparse==0.4.2
+      - tabulate==0.8.10
+      - tensorboard==2.9.1
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - timm==0.5.4
+      - toml==0.10.2
+      - tomli==2.0.1
+      - torchmetrics==0.9.1
+      - tqdm==4.64.0
+      - virtualenv==20.14.1
+      - websocket-client==1.3.3
+      - werkzeug==2.1.2
+      - yarl==1.7.2
+      - zipp==3.8.0
+      - cupy-cuda116
+      - ffcv
+      - numba
