--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = mm-vmae
+name = dataloader-benchmark
 version = 0.0.1
 author = Example Author
 author_email = author@example.com
