run tartanair ffcv bench on azure ml; sync with ml template (precommit); add docker for ffcv conda install; add simple azure monitor (#9)
Co-authored-by: Sai Vemprala <savempra@microsoft.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
           )$
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
+    rev: v2.37.1
     hooks:
       - id: pyupgrade
         args: [--py37-plus]
@@ -37,6 +37,20 @@ repos:
       - id: black
         name: Format code
         args: ["--line-length=120"]
+
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v2.0.4 # Possible releases: https://github.com/hadialqattan/pycln/releases
+    hooks:
+      - id: pycln
+        args: [--all]
+
+  # ref: https://github.com/microsoft/vscode-isort]
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort (python)
+        args: [--profile, "black"]
 
   # python docstring formatting
   - repo: https://github.com/myint/docformatter
