--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,29 @@
 {
-    "python.analysis.typeCheckingMode": "basic",
-    "python.formatting.provider": "black",
+    "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
     },
-    "python.linting.pylintEnabled": false,
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.formatting.provider": "black",
     "python.formatting.blackArgs": [
         "--line-length",
         "120"
     ],
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
         "--max-line-length=120",
+    ],
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "isort.args": [
+        "--profile",
+        "black"
     ],
 }
